--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,24 +10,47 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
+  create-artifacts-bucket:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        aws_region:
+          - af-south-1
+          - ap-east-1
+          - ap-northeast-1
+          - ap-northeast-2
+          - ap-northeast-3
+          - ap-south-1
+          - ap-south-2
+          - ap-southeast-1
+          - ap-southeast-2
+          - ap-southeast-3
+          - ap-southeast-4
+          - ca-central-1
+          - ca-west-1
+          - eu-central-1
+          - eu-central-2
+          - eu-north-1
+          - eu-south-1
+          - eu-south-2
+          - eu-west-1
+          - eu-west-2
+          - eu-west-3
+          - il-central-1
+          - me-central-1
+          - me-south-1
+          - sa-east-1
+          - us-east-1
+          - us-east-2
+          - us-west-1
+          - us-west-2
     steps:
       - uses: actions/checkout@v4
-      - uses: hashicorp/setup-terraform@v2
-      - uses: docker/setup-qemu-action@v3
       - uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.ARN_IAM_ROLE }}
-          aws-region: ap-northeast-1
-      - run: make build
-      - run: terraform init
-      - run: terraform apply -auto-approve
-      - run: terraform output
-      - run: tar cf layers.tar *
-        if: always()
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: layers.tar
-          path: layers.tar
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ matrix.version }}
+      - uses: aws-actions/setup-sam
+      - run: make deploy-artifacts-bucket
+        env:
+          AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
