--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,3 +11,50 @@ jobs:
       - run: pip install poetry
       - run: poetry install
       - run: make lint
+
+  create-artifacts-bucket:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        aws_region:
+          - af-south-1
+          - ap-east-1
+          - ap-northeast-1
+          - ap-northeast-2
+          - ap-northeast-3
+          - ap-south-1
+          - ap-south-2
+          - ap-southeast-1
+          - ap-southeast-2
+          - ap-southeast-3
+          - ap-southeast-4
+          - ca-central-1
+          - ca-west-1
+          - eu-central-1
+          - eu-central-2
+          - eu-north-1
+          - eu-south-1
+          - eu-south-2
+          - eu-west-1
+          - eu-west-2
+          - eu-west-3
+          - il-central-1
+          - me-central-1
+          - me-south-1
+          - sa-east-1
+          - us-east-1
+          - us-east-2
+          - us-west-1
+          - us-west-2
+    steps:
+      - uses: actions/checkout@v4
+      - uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          aws-region: ${{ matrix.version }}
+      - uses: aws-actions/setup-sam
+        with:
+          use-installer: true
+      - run: make create-change-set-artifacts-bucket
+        env:
+          AWS_ROLE_ARN: ${{ secrets.AWS_ROLE_ARN }}
