--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ matrix.version }}
-      - uses: aws-actions/setup-sam
+      - uses: aws-actions/setup-sam@v2
         with:
           use-installer: true
       - run: make create-change-set-artifacts-bucket
