--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,3 +66,16 @@ jobs:
         with:
           name: layers-amd64
           path: layers/
+
+  build-arm64:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/arm64
+      - run: make build-arm64
+      - uses: actions/upload-artifact@v4
+        with:
+          name: layers-arm64
+          path: layers/
